--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
                 background-image: url("https://hawksworthrestaurant.com/wp-content/uploads/2013/12/Lamb-shoulder-depuylentil-celeriac-pumpkin-seed-tangerine-22.jpg");
                 background-repeat: no-repeat;
                 background-position: right top;
-                background-attachment: fixed;
             }
 
 h1 {
@@ -12,28 +11,9 @@ h1 {
     font-size: 24px;
 }
 
-
-.nav ul {
-  color: black;
-}
-
-.nav ul {
-    list-style-type: none;
-    overflow: hidden;
-
-}
-
-.nav li {
-    float: left;
-}
-
-.nav li a {
-  color: black;
-  text-align: left;
-  padding:5px 3px;
-  text-decoration:none;
-}
-
+button:hover {
+      background: green;
+    }
 
 .content p {
   border:none;
